Add favicon link to index.html
Added favicon link to the head section.

--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
             width: 25vmin;
         }
     </style>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
 <body>
     <img src="./terobit-logo-sv.svg">
     <p class="roboto">Coming Soon</p>
 </body>
+
 </html>
